--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Home/AdminHome.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Home/AdminHome.fxml
@@ -15,12 +15,12 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="720.0" prefWidth="1280.0" stylesheets="@adminhome.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="720.0" prefWidth="1280.0" stylesheets="@../Home/adminhome.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <HBox prefHeight="65.0" prefWidth="1280.0" styleClass="top-container" BorderPane.alignment="CENTER">
          <children>
             <AnchorPane prefHeight="60.0" prefWidth="230.0" />
-            <Text fill="#4a85f6" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="heading" text="User Dashboard">
+            <Text fill="#4a85f6" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="heading" text="Home">
                <HBox.margin>
                   <Insets top="20.0" />
                </HBox.margin>
@@ -107,7 +107,7 @@
                      </graphic>
                   </Button>
                   <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" text="Menu">
-<graphic>
+                     <graphic>
                         <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../../images/menu_icon.png" />
@@ -116,7 +116,7 @@
                      </graphic>
                   </Button>
                   <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="210.0" text="Stock">
-<graphic>
+                     <graphic>
                         <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@../../../images/box_icon.png" />
@@ -151,4 +151,44 @@
          </children>
       </AnchorPane>
    </left>
+   <right>
+      <AnchorPane prefHeight="654.0" prefWidth="495.0" style="-fx-background-color: #f5f5f5;" BorderPane.alignment="CENTER">
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+         <children>
+            <VBox prefHeight="654.4" prefWidth="495.2" style="-fx-background-color: white; -fx-background-radius: 20;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <children>
+                  <Label text="Hello world" />
+               </children>
+            </VBox>
+         </children></AnchorPane>
+   </right>
+   <bottom>
+      <AnchorPane maxHeight="0.0" maxWidth="0.0" prefHeight="0.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
+   </bottom>
+   <center>
+      <AnchorPane style="-fx-background-color: #f5f5f5;" BorderPane.alignment="TOP_LEFT">
+         <padding>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </padding>
+         <children>
+            <BorderPane prefHeight="654.4" prefWidth="469.6" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <bottom>
+                  <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0" spacing="30.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" text="Update Data" />
+                     </children>
+                  </HBox>
+               </bottom>
+               <center>
+                  <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: white; -fx-background-radius: 20;" BorderPane.alignment="CENTER">
+                     <children>
+                        <Label text="hello world" />
+                     </children></VBox>
+               </center>
+            </BorderPane>
+         </children>
+      </AnchorPane>
+   </center>
 </BorderPane>
