--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Stock/AdminStock.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Stock/AdminStock.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -262,7 +263,7 @@
                <center>
                   <BorderPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white; -fx-background-radius: 20;" BorderPane.alignment="CENTER">
                      <center>
-                              <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+                              <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" BorderPane.alignment="CENTER">
                            <children>
                               <Label text="Item Infomation">
                                  <padding>
@@ -273,6 +274,12 @@
                                  </font>
                               </Label>
                               <HBox prefHeight="0.0" prefWidth="0.0" style="-fx-border-color: #4a85f6;" />
+                              <TextField prefHeight="30.0" promptText="Item Name*" />
+                              <TextField layoutX="20.0" layoutY="98.0" prefHeight="30.0" promptText="Desired Quantity*" />
+                              <TextField layoutX="20.0" layoutY="139.0" prefHeight="30.0" promptText="Actual Quantity" />
+                              <TextField layoutX="20.0" layoutY="180.0" prefHeight="30.0" promptText="Item Price*" />
+                              <Label text="Item Description:" />
+                              <TextArea prefHeight="200.0" prefWidth="200.0" promptText="Description*" />
                            </children>
                            <padding>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -282,7 +289,9 @@
                      <bottom>
                         <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                           <buttons>
-                            <Button mnemonicParsing="false" text="Add Item +" />
+                            <Button mnemonicParsing="false" text="Submit" />
+                              <Button layoutX="237.0" layoutY="15.0" mnemonicParsing="false" text="Add Item +" />
+                              <Button layoutX="237.0" layoutY="15.0" mnemonicParsing="false" text="Cancel" />
                           </buttons>
                            <opaqueInsets>
                               <Insets />
