--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Analytics/adminanalytics.css
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Analytics/adminanalytics.css
@@ -47,7 +47,7 @@
 }
 
 .analytics-button {
-    -fx-text-fill: #0000ff;
+    -fx-text-fill: #4A85F6;
 }
 .logout-button {
     -fx-background-color: white;
