--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Home/AdminHome.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Home/AdminHome.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.TilePane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
@@ -156,17 +157,7 @@
       </AnchorPane>
    </left>
    <right>
-      <AnchorPane prefHeight="654.0" prefWidth="495.0" style="-fx-background-color: #f5f5f5;" BorderPane.alignment="CENTER">
-         <padding>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </padding>
-         <children>
-            <VBox prefHeight="654.4" prefWidth="495.2" style="-fx-background-color: white; -fx-background-radius: 20;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <children>
-                  <Label text="Hello world" />
-               </children>
-            </VBox>
-         </children></AnchorPane>
+      <AnchorPane style="-fx-background-color: #f5f5f5;" BorderPane.alignment="CENTER" />
    </right>
    <bottom>
       <AnchorPane maxHeight="0.0" maxWidth="0.0" prefHeight="0.0" prefWidth="0.0" BorderPane.alignment="CENTER" />
@@ -177,21 +168,49 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
          <children>
-            <BorderPane prefHeight="654.4" prefWidth="469.6" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <bottom>
-                  <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0" spacing="30.0" BorderPane.alignment="CENTER">
+            <TilePane hgap="10.0" prefHeight="654.4" prefTileHeight="300.0" prefTileWidth="335.0" prefWidth="1069.6" vgap="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+               <children>
+                  <VBox alignment="TOP_CENTER" layoutX="20.0" layoutY="20.0" prefHeight="200.0" prefWidth="335.0" style="-fx-background-color: white; -fx-background-radius: 20;">
                      <children>
-                        <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" text="Update Data" />
+                        <Label text="Noteboard" />
+                        <Line endX="100.0" startX="-100.0" stroke="#4a85f6" />
                      </children>
-                  </HBox>
-               </bottom>
-               <center>
-                  <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: white; -fx-background-radius: 20;" BorderPane.alignment="CENTER">
+                  </VBox>
+                  <VBox alignment="TOP_CENTER" layoutX="20.0" layoutY="20.0" prefHeight="200.0" prefWidth="335.0" style="-fx-background-color: white; -fx-background-radius: 20;">
                      <children>
-                        <Label text="hello world" />
-                     </children></VBox>
-               </center>
-            </BorderPane>
+                        <Label text="Stock Alerts" />
+                        <Line endX="100.0" startX="-100.0" stroke="#4a85f6" />
+                     </children>
+                  </VBox>
+                  <VBox alignment="TOP_CENTER" layoutX="366.0" layoutY="20.0" prefHeight="200.0" prefWidth="335.0" style="-fx-background-color: white; -fx-background-radius: 20;">
+                     <children>
+                        <Label text="Menu Top Sellers" />
+                        <Line endX="100.0" startX="-100.0" stroke="#4a85f6" />
+                     </children>
+                  </VBox>
+                  <VBox alignment="TOP_CENTER" layoutX="712.0" layoutY="20.0" prefHeight="200.0" prefWidth="335.0" style="-fx-background-color: white; -fx-background-radius: 20;">
+                     <children>
+                        <Label text="User Report" />
+                        <Line endX="100.0" startX="-100.0" stroke="#4a85f6" />
+                     </children>
+                  </VBox>
+                  <VBox alignment="TOP_CENTER" layoutX="20.0" layoutY="331.0" prefHeight="200.0" prefWidth="335.0" style="-fx-background-color: white; -fx-background-radius: 20;">
+                     <children>
+                        <Label text="Daily Sales" />
+                        <Line endX="100.0" startX="-100.0" stroke="#4a85f6" />
+                     </children>
+                  </VBox>
+                  <VBox alignment="TOP_CENTER" layoutX="366.0" layoutY="331.0" prefHeight="200.0" prefWidth="335.0" style="-fx-background-color: white; -fx-background-radius: 20;">
+                     <children>
+                        <Label text="Meow IDK" />
+                        <Line endX="100.0" startX="-100.0" stroke="#4a85f6" />
+                     </children>
+                  </VBox>
+               </children>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+            </TilePane>
          </children>
       </AnchorPane>
    </center>
