--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/dynamics/userdynamic.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/dynamics/userdynamic.fxml
@@ -9,43 +9,43 @@
 <?import javafx.scene.layout.HBox?>
 
 
-<HBox prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+<HBox prefWidth="638.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <AnchorPane styleClass="database-label" HBox.hgrow="ALWAYS">
+        <AnchorPane prefWidth="200.0" styleClass="database-label" HBox.hgrow="ALWAYS">
             <children>
                 <Label id="firstnameLabel" fx:id="firstnamefield" alignment="CENTER" contentDisplay="BOTTOM" layoutX="37.0" layoutY="16.0" prefHeight="50.4" prefWidth="107.2" text="Name" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
             </children>
         </AnchorPane>
-        <AnchorPane layoutX="10.0" layoutY="10.0" HBox.hgrow="ALWAYS">
+        <AnchorPane layoutX="10.0" layoutY="10.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
             <children>
                 <Label id="usernameLabel" fx:id="usernamefield" alignment="CENTER" layoutX="37.0" layoutY="16.0" prefHeight="50.4" prefWidth="107.2" text="Username" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
             </children>
         </AnchorPane>
-        <AnchorPane layoutX="210.0" layoutY="10.0" HBox.hgrow="ALWAYS">
+        <AnchorPane layoutX="210.0" layoutY="10.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
             <children>
                 <Label id="userSinceLabel" fx:id="usersince" alignment="CENTER" layoutX="37.0" layoutY="16.0" prefHeight="50.0" prefWidth="108.0" text="Usersince" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
             </children>
         </AnchorPane>
-        <AnchorPane layoutX="410.0" layoutY="10.0" HBox.hgrow="ALWAYS">
+        <AnchorPane layoutX="410.0" layoutY="10.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
             <children>
                 <Label id="emailLabel" fx:id="emailfield" alignment="CENTER" layoutX="38.0" layoutY="16.0" prefHeight="50.0" prefWidth="108.0" text="Email" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
             </children>
         </AnchorPane>
-        <AnchorPane layoutX="488.0" layoutY="10.0" HBox.hgrow="ALWAYS">
+        <AnchorPane layoutX="488.0" layoutY="10.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
             <children>
                   <Label id="roleLabel" fx:id="rolefield" alignment="CENTER" prefHeight="50.0" prefWidth="200.0" style="-fx-background-radius: 10; -fx-background-color: #0095FF;" text="ROLE" textFill="WHITE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
             </children>
          <padding>
-            <Insets bottom="10.0" top="10.0" />
+            <Insets bottom="10.0" left="20.0" right="20.0" top="10.0" />
          </padding>
         </AnchorPane>
         <AnchorPane layoutX="520.0" layoutY="10.0" minWidth="50.0" HBox.hgrow="ALWAYS">
             <children>
-                <Button id="editbutton" fx:id="editbutton" contentDisplay="GRAPHIC_ONLY" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: transparent;" text="Button" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <Button fx:id="editbutton" contentDisplay="GRAPHIC_ONLY" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: transparent;" text="Button" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <graphic>
                         <ImageView fitHeight="22.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../../../../../../resources/teampixl/com/pixlpos/images/adminicons/green_edit_write_pen_icon.png" />
+                                <Image url="@../../../images/adminicons/green_edit_write_pen_icon.png" />
                             </image>
                         </ImageView>
                     </graphic>
@@ -54,11 +54,11 @@
         </AnchorPane>
         <AnchorPane layoutX="542.0" layoutY="10.0" minWidth="50.0" HBox.hgrow="ALWAYS">
             <children>
-                <Button id="removebutton" fx:id="removebutton" contentDisplay="GRAPHIC_ONLY" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: transparent;" text="Button" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <Button fx:id="removebutton" contentDisplay="GRAPHIC_ONLY" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" style="-fx-background-color: transparent;" text="Button" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <graphic>
                         <ImageView fitHeight="22.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../../../../../../resources/teampixl/com/pixlpos/images/adminicons/red_trash_2_icon.png" />
+                                <Image url="@../../../images/adminicons/red_trash_2_icon.png" />
                             </image>
                         </ImageView>
                     </graphic>
