--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Users/AdminUsers.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Users/AdminUsers.fxml
@@ -24,11 +24,7 @@
     <top>
         <HBox prefHeight="65.0" prefWidth="1280.0" styleClass="top-container" BorderPane.alignment="CENTER">
             <children>
-                <AnchorPane prefHeight="60.0" prefWidth="230.0">
-                    <children>
-                        <Label layoutX="39.0" layoutY="16.0" styleClass="logo" text="PIXL Services" />
-                    </children>
-                </AnchorPane>
+                <AnchorPane prefHeight="60.0" prefWidth="230.0" />
             <Label styleClass="heading" text="User Dashboard">
                <HBox.margin>
                   <Insets top="20.0" />
@@ -59,19 +55,19 @@
                     </HBox.margin>
                 </HBox>
                 <Region HBox.hgrow="ALWAYS" />
-                <HBox prefWidth="200.0">
+                <HBox alignment="CENTER" spacing="20.0">
                     <children>
-                        <Label fx:id="date" text="27-09-2024" textAlignment="CENTER">
-                            <padding>
-                                <Insets left="30.0" top="25.0" />
-                            </padding>
-                        </Label>
-                        <Label fx:id="time" text="10:42 AM">
-                            <padding>
-                                <Insets left="20.0" top="25.0" />
-                            </padding>
-                        </Label>
+                  <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../images/adminicons/weathericons/sunny_icon.png" />
+                     </image>
+                  </ImageView>
+                        <Label fx:id="date" text="27-09-2024" textAlignment="CENTER" />
+                        <Label fx:id="time" text="10:42 AM" />
                     </children>
+               <padding>
+                  <Insets right="20.0" />
+               </padding>
                 </HBox>
             </children>
         </HBox>
@@ -144,7 +140,7 @@
                         </Button>
                     </children>
                 </VBox>
-                <VBox layoutX="66.0" layoutY="569.0" prefHeight="50.0" prefWidth="210.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
+                <VBox alignment="CENTER" layoutX="66.0" layoutY="569.0" prefHeight="50.0" prefWidth="210.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
                     <children>
                         <Button fx:id="logoutbutton" mnemonicParsing="false" onAction="#onLogoutButtonClick" prefHeight="40.0" prefWidth="230.0" styleClass="logout-button" text="Logout">
                             <graphic>
@@ -155,6 +151,7 @@
                                 </ImageView>
                             </graphic>
                         </Button>
+                  <Label styleClass="logo-text" text="© PIXL Services" />
                     </children>
                 </VBox>
             </children>
@@ -178,7 +175,7 @@
                               <Font size="24.0" />
                            </font>
                         </Label>
-                         <HBox prefHeight="0.0" prefWidth="0.0" styleClass="line" />
+                         <HBox prefHeight="0.0" prefWidth="0.0" styleClass="container-line" />
                          <Label text="Username:" />
                          <TextField fx:id="usernamefield" prefHeight="30.0" promptText="Username *" />
                         <Label text="First Name:" />
